--- a/public/index.html
+++ b/public/index.html
@@ -1,69 +1,82 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <meta charset="utf-8">
-    <title>Welcome to Firebase Hosting</title>
+
+    <title>Raspberry Pi Firebase example</title>
+
     <style media="screen">
-      body {
-        font-family: Roboto, Arial, sans-serif;
-        background: #ECEFF1;
-        color: rgba(0,0,0,0.87);
-      }
 
-      a {
-        color: rgb(3,155,229);
-      }
-
-      #message {
-        max-width: 400px;
-        margin: 40px auto;
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-        border-radius: 2px;
-        background: white;
-        padding: 16px 24px;
-      }
-
-      #message h1 {
-        font-size: 22px;
-        font-weight: 500;
-        text-align: center;
-        margin: 0 0 16px;
-      }
-
-      #message p {
-        font-weight: 300;
-        line-height: 150%;
-      }
-
-      #message ul {
-        list-style: none;
-        margin: 16px 0 0;
-        padding: 0;
-        text-align: center;
-      }
-
-      #message li a {
-        display: inline-block;
-        padding: 8px;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-weight: 500;
-        background: rgb(3,155,229);
-        color: white;
-        border: 1px solid rgb(3,155,229);
-        border-radius: 3px;
-        font-size: 14px;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-      }
     </style>
+
+    <!-- Подключаем Webix -->
+    <script type="text/javascript" src="https://cdn.webix.com/edge/webix.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.webix.com/edge/webix.css">
+
+    <!-- Подключаем скрипт Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
+
+    <!-- Параметры соединения к Firebase -->
+    <script>
+        // Сюда нужно вписать данные проекта Firebase. Найти их можно в консоли
+        var config = {
+            apiKey: "API_KEY",
+            authDomain: "PROJECT_ID.firebaseapp.com",
+            databaseURL: "https://DATABASE_NAME.firebaseio.com",
+            storageBucket: "BUCKET.appspot.com",
+            messagingSenderId: "SENDER_ID"
+        };
+
+        // Инициализируем Firebase
+        firebase.initializeApp(config);
+
+        // Запускаем Webix
+        webix.ready(function() {
+            // Запускаем главный вид
+            webix.ui({
+                rows: [
+                    // Карта
+                    {
+                        key:"AIzaSyASK9IHky3keeBM5aFQIiMt23e1KOsbJHk",
+                        view:"google-map",
+                        id:"map1",
+                        zoom:12,
+                        center: [53.1384, 29.2214]
+                    }
+                ]
+            });
+
+            // Ссылка на путь в БД
+            var real_time = firebase.database().ref('real_time');
+
+            // Создаем маркер, но пока не добавляем на карту
+            var marker = new google.maps.Marker({
+                position: {lat:0,lng:0}
+                ,icon: { path: google.maps.SymbolPath.CIRCLE ,scale: 5 }
+            });
+
+            // подписываемся на обновление данных
+            real_time.on('value', function(data){
+                var values = data.val();
+
+                marker.setPosition(new google.maps.LatLng({lat: values.lat, lng: values.lon}));
+
+                var map_obj = $$('map1').getMap();
+
+                // Если маркера нет на карте (данные пришли первый раз), то добавляем его туда
+                if( !marker.getMap() ) {
+                    marker.setMap(map_obj);
+                    // И переносимся над Землей на точку объекта
+                    map_obj.panTo(marker.getPosition());
+                }
+            });
+        });
+
+    </script>
+
+
   </head>
-  <body>
-    <div id="message">
-      <h1>Welcome to Firebase Hosting</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <ul>
-        <li><a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a></li>
-      </ul>
-    </div>
-  </body>
+
+  <body></body>
 </html>
